overlays/grafana/grafana.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
