overlays/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-mcp-server
  labels:
    app: grafana-mcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-mcp-server
  template:
    metadata:
      labels:
        app: grafana-mcp-server
    spec:
      containers:
        - name: grafana-mcp-server
          image: grafana/mcp-grafana:latest
          imagePullPolicy: Always
          args:
            - -t
            - streamable-http
            - --allowed-hosts
            - grafana-mcp.int.mvaldes.dev,grafana-mcp.int.mvaldes.dev:443,grafana-mcp-server.grafana.svc.cluster.local,grafana-mcp-server.grafana.svc.cluster.local:8000
          ports:
            - name: http
              containerPort: 8000
      restartPolicy: Always
