overlays/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-mcp-server
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`grafana-mcp.int.mvaldes.dev`)
      services:
        - name: grafana-mcp-server
          port: 8000
